--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.2",
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "vue-moment": "^4.1.0",
+        "vue-router": "^3.5.1"
     }
 }
